View Issue Details

IDProjectCategoryView StatusLast Update
0023813Open CASCADEOCCT:Visualizationpublic2013-12-19 13:59
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0023813: TKOpenGl, OpenGl_Texture ignores stride image property
DescriptionTexture could be loaded incorrectly if rows in image are packed with padding bytes for alignment (Image_PixMap::SizeRowBytes()) or their order was specified from top-to-down rather than bottom-to-top (Image_PixMap::IsTopDown()).
Steps To Reproduce
# This scenario reproduces problem with wrong dimensions
pload MODELING
pload VISUALIZATION
box b 1 2 3
vinit
vsetdispmode 1
vdisplay b
vfit
vdump texture_409.png rgb 409 409
vdump texture_412.png rgb 412 412

# texture loaded correctly
vtexture b texture_412.png

# texture is corrupted during uploading to OpenGL
vtexture b texture_409.png
TagsNo tags attached.
Test case numberbugs vis bug23813

Attached Files

  • snap_ok.png (13,332 bytes)
  • snap_ko.png (24,523 bytes)

Relationships

related to 0023544 closedkgv Texture management in TKOpenGl should be redesigned 
related to 0024392 closedbugmaster TKService, Image_PixMap - use bottom-up image data storage by default 

Activities

kgv

2013-03-05 09:22

developer  

snap_ok.png (13,332 bytes)

kgv

2013-03-05 09:22

developer  

snap_ko.png (24,523 bytes)

kgv

2013-11-23 14:13

developer   ~0026863

Patch is ready for review in CR23813 branch (based on CR24392 branch).

apl

2013-11-25 11:08

developer   ~0026871

Dear Bugmaster,

The branch is reviewed without remarks.

Please test.

apn

2013-11-26 18:46

administrator   ~0026933

Last edited: 2013-11-26 18:47

Dear BugMaster,

Branch CR23813 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 1d2358da58cf79ccdf93a7899ccd6975a26d27b5

Number of compiler warnings:

occt component :
Linux: 320 (320 on master)
Windows: 0 (0 on master)

products component :
Linux: 188 (188 on master)
Windows: 286 (286 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
bugs vis bug23813 - OK

Testing on Linux:
Total MEMORY difference: 358409872 / 358543144
Total CPU difference: 43218.369999999966 / 43977.48000000039

Testing on Windows:
Total MEMORY difference: 413033320 / 412727724
Total CPU difference: 32455.953125 / 32189.140625

There is difference in images found by testdiff:
IMAGE bugs vis bug9517: bug9517_Driver1_Viewer1_View1.png differs
http://occt-tests/CR23813-master-occt/Debian60-64/diff-Debian60-64.html
http://occt-tests/CR23813-master-occt/Windows-32-VC9/diff-Windows-32-VC9.html

kgv

2013-11-27 09:07

developer   ~0026936

Dear bugmaster

> IMAGE bugs vis bug9517: bug9517_Driver1_Viewer1_View1.png differs
This is an improvement (for regression which has not been reported) - see original issue 0009517, image now looks correctly.

Related Changesets

occt: master 74706083

2013-11-28 09:55:52

kgv


Committer: bugmaster Details Diff
0023813: TKOpenGl, OpenGl_Texture ignores stride image property
Added test case tests/bugs/vis/bug23813
Affected Issues
0023813
mod - src/OpenGl/OpenGl_GraphicDriver_7.cxx Diff File
mod - src/OpenGl/OpenGl_Texture.cxx Diff File
add - tests/bugs/vis/bug23813 Diff File

Issue History

Date Modified Username Field Change
2013-03-05 09:21 kgv New Issue
2013-03-05 09:21 kgv Assigned To => san
2013-03-05 09:22 kgv File Added: snap_ok.png
2013-03-05 09:22 kgv File Added: snap_ko.png
2013-03-05 09:22 kgv Relationship added related to 0023544
2013-10-18 07:42 kgv Target Version => 6.7.1
2013-11-22 06:39 kgv Relationship added related to 0024392
2013-11-23 14:10 kgv Assigned To san => kgv
2013-11-23 14:10 kgv Status new => assigned
2013-11-23 14:10 kgv Target Version 6.7.1 => 6.7.0
2013-11-23 14:10 kgv Summary OpenGl_Texture ignores stride and upside-down image properties => TKOpenGl, OpenGl_Texture ignores stride image property
2013-11-23 14:10 kgv Steps to Reproduce Updated
2013-11-23 14:13 kgv Note Added: 0026863
2013-11-23 14:13 kgv Assigned To kgv => apl
2013-11-23 14:13 kgv Status assigned => resolved
2013-11-25 11:08 apl Note Added: 0026871
2013-11-25 11:08 apl Assigned To apl => bugmaster
2013-11-25 11:08 apl Status resolved => reviewed
2013-11-25 12:26 mkv Assigned To bugmaster => mkv
2013-11-26 18:46 apn Note Added: 0026933
2013-11-26 18:47 apn Note Edited: 0026933
2013-11-26 18:47 apn Note Edited: 0026933
2013-11-26 18:48 apn Test case number => bugs vis bug23813
2013-11-26 18:48 apn Assigned To mkv => kgv
2013-11-26 18:48 apn Status reviewed => assigned
2013-11-27 09:07 kgv Note Added: 0026936
2013-11-27 09:07 kgv Assigned To kgv => bugmaster
2013-11-27 09:07 kgv Status assigned => feedback
2013-11-28 13:51 bugmaster Assigned To bugmaster => kgv
2013-11-28 13:51 bugmaster Status feedback => tested
2013-12-02 10:21 bugmaster Changeset attached => occt master 74706083
2013-12-02 10:21 bugmaster Assigned To kgv => bugmaster
2013-12-02 10:21 bugmaster Status tested => verified
2013-12-02 10:21 bugmaster Resolution open => fixed
2013-12-19 13:50 bugmaster Status verified => closed
2013-12-19 13:59 bugmaster Fixed in Version => 6.7.0