0023813: TKOpenGl, OpenGl_Texture ignores stride image property Added test case tests/bugs/vis/bug23813